--- a/src/app/gems/gems.component.html
+++ b/src/app/gems/gems.component.html
@@ -1,3 +1,20 @@
+
 <p>
-  gems works!
+  Gems works!
 </p>
+<div *ngIf="gems" class="row" >
+<a  href="gem/{{gem.id}}"   *ngFor="let gem of gems" class="col-12 col-sm-4 gemslink">
+	<div  class="hero card">		
+
+        <div class="card-header">
+           <div class=frame>
+               <span class="helper"></span>
+               <img src="{{gem.img_url}}" />
+            </div>  
+        </div>
+		<div class="card-body">
+			{{gem.name}}
+		</div>
+	</div> 		
+ </a>
+</div>
