--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <header>
-	<nav class="navbar navbar-dark bg-dark">
-		<ul class="navbar-nav">
-			<li class="nav-item"> <a class="nav-link" href="/">Gems </a></li>
-		</ul>
+	<nav class="navbar ">
+		<span class="container">
+		<a class="nav-link" href="/"><img src="assets/img/logo.png"></a>
+        </span>
 	</nav>
 </header>
 <div  class="container">
 <router-outlet></router-outlet>
 </div>
 <footer>
-    2017 Carlos Gomez 
+   <div class="container footer">2017 Carlos Gomez</div>
+     
 </footer>
