--- a/src/app/gem/gem.component.html
+++ b/src/app/gem/gem.component.html
@@ -1,33 +1,29 @@
 <div *ngIf="gem">
 	
-	<div  class="hero card">		
-        <div class="card-header">
-            <h2>
-		        {{gem.name}}
-	        </h2>
-        </div>
-        <div class="card-header">
-           <div class=frame>
-               <span class="helper"></span>
-               <img src="{{gem.img_url}}" />
-            </div>  
+		
+        <div class="box50">
+            <h2 class="mobHide">{{gem.name}}</h2>
+            <div class="box-header">
+                <img class="gem-img" src="{{gem.img_url}}" />
+             </div>
+            <span><strong>Description :</strong> {{gem.description}}</span>	
         </div>
         
-		<div class="card-body">
-			<ul>
-			    <li><strong>Description</strong> : {{gem.description}}</li>	
-	            <li><strong>Formula</strong> : {{gem.formula}}</li>
-            	<li><strong>Crystal Structure</strong> : {{gem.crystal_structure}}</li>
-                <li><strong>Color</strong> : {{gem.color}}</li>
-                <li><strong>Hardness</strong> : {{gem.hardness}}</li>
-                <li><strong>Refractive Index</strong> : {{gem.refractive_index}}</li>
-                <li><strong>Density</strong> : {{gem.density}}</li>
-                <li><strong>Cleavage</strong> : {{gem.cleavage}}</li>	
-                <li><strong>Transparency</strong> : {{gem.transparency}}</li>
-                <li><strong>Birefringence</strong> : {{gem.birefringence}}</li>
-                <li><strong>Luster</strong> : {{gem.luster}}</li>
-                <li><strong>Fluorescence</strong> : {{gem.fluorescence}}</li>
-			</ul>
+		<div class="box50">
+			<h2 class="deskHide">{{gem.name}}</h2>
+	            <span><strong>Formula :</strong> {{gem.formula}}</span>
+            	<span><strong>Crystal Structure :</strong> {{gem.crystal_structure}}</span>
+                <span><strong>Color :</strong> {{gem.color}}</span>
+                <span><strong>Hardness :</strong> {{gem.hardness}}</span>
+                <span><strong>Refractive Index :</strong> {{gem.refractive_index}}</span>
+                <span><strong>Density :</strong> {{gem.density}}</span>
+                <span><strong>Cleavage :</strong> {{gem.cleavage}}</span>	
+                <span><strong>Transparency :</strong> {{gem.transparency}}</span>
+                <span><strong>Birefringence :</strong> {{gem.birefringence}}</span>
+                <span><strong>Luster :</strong> {{gem.luster}}</span>
+                <span><strong>Fluorescence :</strong> {{gem.fluorescence}}</span>
+		
 		</div>
+	<div  class="clear">	
 	</div> 	
 </div>
