--- a/src/app/gems/gems.component.css
+++ b/src/app/gems/gems.component.css
@@ -18,6 +18,7 @@
     background: #3A6F9A;
     vertical-align: middle;
     max-width: 85%;
+    max-height: 16em;
 }
 /*vertical image  and  width fixes*/
 .row{padding: 2em 0;}
