--- a/src/app/gems/gems.component.html
+++ b/src/app/gems/gems.component.html
@@ -1,5 +1,13 @@
 
+<div class="jumbotron">
+	<h1> Gems</h1>
+	<p>
+		Please  click the images  below  to get  the information on the selected  gem
+		
+	</p>
+	
 
+</div>
 <div *ngIf="gems" class="row" >
 <a  href="gem/{{gem.id}}"   *ngFor="let gem of gems" class="box30 gemslink">
 	<div  class=" box">		
